test/Fail/Issue2998-illtyped.err
Issue2998-illtyped.agda:12.1-10: error: [IllTypedPatternAfterWithAbstraction]
Ill-typed pattern after with abstraction:  r
(perhaps you can replace it by '_'?)
when checking the clause left hand side
Issue2998-illtyped.with-16 x _
